[package]
name = "monad-execution-engine"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp = { workspace = true }

async-trait = "0.1"
bytes = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
